# llmbox

./: -la  .gitignore  LICENSE  README.md  pyproject.toml
llmbox/: __init__.py  cli.py
llmbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llmbox/adapters/: base.py  deepseek.py  groq.py  longcat.py  ollama.py  openrouter.py
llmbox/integrations/: mcpbox.py
llmbox/llmbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
llmbox/router/: core.py
llmbox/server/: api.py
llmbox/tests/: test_smoke.py
llmbox/utils/: cache.py  config.py  cost.py  language.py  log.py
scripts/: backup-local.sh
